# piighost-api

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.fr.md  README.md  docker-compose.yml  entrypoint.sh  pipeline.py  pipeline.toml  pyproject.toml  zensical.fr.toml  zensical.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/en/: index.md  migration.md
docs/en/getting-started/: installation.md  quickstart.md
docs/en/reference/: cli.md  endpoints.md
docs/fr/: index.md  migration.md
docs/fr/getting-started/: installation.md  quickstart.md
docs/fr/reference/: cli.md  endpoints.md
docs/superpowers/plans/: 2026-05-25-toml-config-migration.md
src/piighost_api/: __init__.py  app.py  auth.py  cli.py  loader.py  observation.py
src/piighost_api/dataset/: __init__.py  extract.py  metrics.py
tests/: conftest.py  test_app.py  test_auth.py  test_cli.py  test_cli_serve.py  test_dataset_extract.py  test_dataset_metrics.py  test_loader.py  test_observation.py  test_routes_labels.py
tests/fixtures/: minimal.toml  multi_detector.toml
