[project]
name = "piighost-api"
version = "0.7.0"
description = "REST API server for piighost PII anonymization inference."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Athroniaeth" },
]
keywords = [
    "pii",
    "anonymization",
    "api",
    "inference",
    "ner",
    "gliner",
    "privacy",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "piighost>=0.10",
    "keyshield[argon2]>=2.0",
    "litestar>=2.16",
    "uvicorn>=0.34",
    "aiocache>=0.12",
    "msgspec>=0.19",
    "requests>=2.32",
    "typer>=0.12",
]

[project.optional-dependencies]
langfuse = ["piighost[langfuse]"]
opik = ["piighost[opik]"]
# Dataset CLI dependencies. Pulls the Langfuse SDK so the
# ``piighost-api dataset extract`` command can talk to the observation
# backend directly. python-dotenv lets the CLI auto-load a .env from
# the current working directory so the operator doesn't have to source
# it manually before each run.
dataset = ["langfuse>=3.0", "python-dotenv>=1.0"]

[project.urls]
Homepage = "https://github.com/Athroniaeth/piighost-api"
Issues = "https://github.com/Athroniaeth/piighost-api/issues"
Changelog = "https://github.com/Athroniaeth/piighost-api/blob/master/CHANGELOG.md"

[project.scripts]
piighost-api = "piighost_api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/piighost_api"]

[tool.pyrefly]
search_path = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "--cov=src/piighost_api"
asyncio_mode = "auto"

[tool.coverage.report]
show_missing = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
# piighost is intentionally NOT pinned to a sibling path here. The
# committed config resolves piighost from PyPI so CI, Docker, and
# fresh clones all work without flags. For local dev that picks up
# in-flight changes from ../piighost, run ``make dev-local`` which
# adds the editable install on top of the PyPI sync. See the Makefile.

[dependency-groups]
dev = [
    "ruff>=0.15",
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25",
    "pyrefly>=0.55",
    "commitizen>=4.13",
]